boltffi_bindgen/src/render/csharp/snapshots/boltffi_bindgen__render__csharp__templates__tests__snapshot_empty_record.snap
---
source: boltffi_bindgen/src/render/csharp/templates.rs
assertion_line: 175
expression: template.render().unwrap()
---
// <auto-generated>
// This file was generated by BoltFFI. Do not edit.
// </auto-generated>

using System;
using System.Runtime.InteropServices;

namespace Demo
{
    [StructLayout(LayoutKind.Sequential)]
    public readonly record struct Unit(
    )
    {
        internal static Unit Decode(WireReader reader) =>
            new Unit(
            );

        internal int WireEncodedSize() =>
            0;

        internal void WireEncodeTo(WireWriter wire)
        {
        }
    }
}
